# pygeofilter

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: main.yml  publish.yml  release.yml
debian/: changelog  clean  control  copyright  py3dist-overrides  python3-pygeofilter.manpages  rules  watch
debian/man/: pygeofilter.1
debian/upstream/: metadata
docs/: conf.py
examples/: cql2.ipynb  test-solr-queries.py
pygeofilter/: ast.py  cli.py  values.py
pygeofilter/backends/: optimize.py
pygeofilter/backends/django/: evaluate.py  filters.py
pygeofilter/backends/elasticsearch/: evaluate.py
pygeofilter/backends/geopandas/: evaluate.py  filters.py
pygeofilter/backends/native/: evaluate.py
pygeofilter/backends/opensearch/: evaluate.py
pygeofilter/backends/oraclesql/: evaluate.py
pygeofilter/backends/solr/: __init__.py  evaluate.py  util.py
pygeofilter/backends/sql/: evaluate.py
pygeofilter/backends/sqlalchemy/: evaluate.py  filters.py
pygeofilter/parsers/: iso8601.py
pygeofilter/parsers/cql2_json/: parser.py
pygeofilter/parsers/cql2_text/: grammar.lark  parser.py
pygeofilter/parsers/cql_json/: parser.py
pygeofilter/parsers/fes/: base.py  gml.py  util.py
pygeofilter/parsers/jfe/: parser.py
tests/: test_optimize.py
tests/backends/django/: test_django_evaluate.py
tests/backends/django/testapp/: models.py  tests.py
tests/backends/django/testapp/migrations/: 0001_initial.py
tests/backends/elasticsearch/: test_evaluate.py
tests/backends/oraclesql/: test_evaluate.py
tests/backends/solr/: test_evaluate.py
tests/backends/sqlalchemy/: test_evaluate.py
tests/native/: test_evaluate.py
tests/parsers/cql2_json/: test_parser.py
tests/parsers/cql2_text/: test_parser.py
tests/parsers/cql_json/: test_parser.py
tests/parsers/ecql/: test_parser.py
tests/parsers/fes/: test_v11.py  test_v20.py
tests/parsers/jfe/: test_parser.py
tests/test_sql/: test_evaluate.py
