[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "pygeofilter"
description = "pygeofilter is a pure Python parser implementation of OGC filtering standards"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Fabian Schindler", email = "fabian.schindler@eox.at" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: GIS",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dynamic = ["version"]
dependencies = [
    "click",
    "dateparser",
    "lark",
    "pygeoif>=1.0.0",
]

[project.optional-dependencies]
backend-django = ["django"]
backend-sqlalchemy = ["geoalchemy2", "sqlalchemy"]
backend-native = ["shapely"]
backend-elasticsearch = ["elasticsearch", "elasticsearch-dsl"]
backend-opensearch = ["opensearch-py", "opensearch-dsl"]
fes = ["pygml>=0.2"]
dev = [
    "flake8",
    "pytest",
    "pytest-django",
    "mypy<=1.10.0",
    "types-dateparser",
    "pre-commit",
]
test = [
    "pytest",
    "pytest-django",
    "django",
    "geoalchemy2",
    "sqlalchemy",
    "geopandas",
    "fiona",
    "pyproj",
    "rtree",
    "pygml",
    "dateparser",
    "lark",
    "elasticsearch",
    "elasticsearch-dsl",
    "opensearch-py",
    "opensearch-dsl",
]
docs = [
    "sphinxcontrib-apidoc",
    "m2r2",
]

[project.scripts]
pygeofilter = "pygeofilter.cli:cli"

[project.urls]
Homepage = "https://github.com/geopython/pygeofilter"
Documentation = "https://pygeofilter.readthedocs.io"
Repository = "https://github.com/geopython/pygeofilter"
Issues = "https://github.com/geopython/pygeofilter/issues"

[tool.setuptools.dynamic]
version = { attr = "pygeofilter.version.__version__" }

[tool.setuptools.packages.find]
include = ["pygeofilter*"]

[tool.setuptools.package-data]
pygeofilter = ["py.typed", "**/*.lark"]

[tool.isort]
profile = "black"
default_section = "THIRDPARTY"

[tool.flake8]
ignore = ["E501", "W503", "E203"]
exclude = [".git", "__pycache__", "docs/conf.py", "old", "build", "dist"]
max-complexity = 12
max-line-length = 80

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
